tests/paczka1/fuzzy1/72595212.err
Error in line 7: MzFg A847 73,6
Error in line 26: 6RqBU9rA A307 107,0
Error in line 33: 8huyGBD A847 31,3
